--- a/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.html
+++ b/src/app/modules/student/studentprimaryinfo/studentprimaryinfo.component.html
@@ -13,7 +13,7 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline" fxFlex>
                             <mat-label>Name</mat-label>
-                            <input formControlName="FirstName" autocomplete="Off" #input matInput [maxlength]="50">
+                            <input formControlName="FirstName" (blur)="OnBlur()" autocomplete="Off" #input matInput [maxlength]="50">
                             <span class="text-danger"
                                 *ngIf="f.FirstName.touched && f.FirstName.hasError('required')">First Name
                                 is required.</span>
@@ -22,7 +22,7 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline" fxFlex>
                             <mat-label>Last Name</mat-label>
-                            <input formControlName="LastName" autocomplete="Off" #input matInput [maxlength]="50">
+                            <input formControlName="LastName" autocomplete="Off" (blur)="OnBlur()" #input matInput [maxlength]="50">
                         </mat-form-field>
                     </mat-grid-tile>
 
@@ -50,7 +50,9 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline" fxFlex>
                             <mat-label>Father's name</mat-label>
-                            <input formControlName="FatherName" autocomplete="Off" #input matInput [maxlength]="50">
+                            <input formControlName="FatherName" 
+                            (blur)="OnBlur()"
+                            autocomplete="Off" #input matInput [maxlength]="50">
                             <span class="text-danger"
                                 *ngIf="f.FatherName.touched && f.FatherName.hasError('required')">Father's
                                 name
@@ -60,7 +62,8 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline" fxFlex>
                             <mat-label>Father's occupation</mat-label>
-                            <input formControlName="FatherOccupation" autocomplete="Off" #input matInput
+                            <input formControlName="FatherOccupation" (blur)="OnBlur()"
+                             autocomplete="Off" #input matInput
                                 [maxlength]="50">
                             <span class="text-danger"
                                 *ngIf="f.FatherOccupation.touched && f.FatherOccupation.hasError('required')">Father's
@@ -70,7 +73,8 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline" fxFlex>
                             <mat-label>Mother's name</mat-label>
-                            <input formControlName="MotherName" autocomplete="Off" matInput [maxlength]="50">
+                            <input formControlName="MotherName" (blur)="OnBlur()"
+                             autocomplete="Off" matInput [maxlength]="50">
                             <span class="text-danger"
                                 *ngIf="f.MotherName.touched && f.MotherName.hasError('required')">Mother's
                                 name
@@ -80,7 +84,8 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline" fxFlex>
                             <mat-label>Mother's Occupation</mat-label>
-                            <input formControlName="MotherOccupation" autocomplete="Off" matInput [maxlength]="50">
+                            <input formControlName="MotherOccupation" (blur)="OnBlur()"
+                             autocomplete="Off" matInput [maxlength]="50">
                             <span class="text-danger"
                                 *ngIf="f.MotherOccupation.touched && f.MotherOccupation.hasError('required')">Mother's
                                 occupation
@@ -90,7 +95,7 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline" fxFlex>
                             <mat-label>Gender</mat-label>
-                            <mat-select formControlName="Gender">
+                            <mat-select formControlName="Gender" (selectionChange)="OnBlur()">
                                 <mat-option *ngFor="let p of Genders" [value]="p.MasterDataId">
                                     {{p.MasterDataName}}
                                 </mat-option>
@@ -102,7 +107,7 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline" fxFlex>
                             <mat-label>Religion</mat-label>
-                            <mat-select formControlName="Religion">
+                            <mat-select formControlName="Religion" (selectionChange)="OnBlur()">
                                 <mat-option *ngFor="let p of Religion" [value]="p.MasterDataId">
                                     {{p.MasterDataName}}
                                 </mat-option>
@@ -112,7 +117,7 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline" fxFlex>
                             <mat-label>Blood group</mat-label>
-                            <mat-select formControlName="Bloodgroup">
+                            <mat-select formControlName="Bloodgroup" (selectionChange)="OnBlur()">
                                 <mat-option *ngFor="let p of Bloodgroup" [value]="p.MasterDataId">
                                     {{p.MasterDataName}}
                                 </mat-option>
@@ -125,7 +130,7 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline" fxFlex>
                             <mat-label>Category</mat-label>
-                            <mat-select formControlName="Category">
+                            <mat-select formControlName="Category" (selectionChange)="OnBlur()">
                                 <mat-option *ngFor="let p of Category" [value]="p.MasterDataId">
                                     {{p.MasterDataName}}
                                 </mat-option>
@@ -135,7 +140,9 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline" fxFlex>
                             <mat-label>DOB</mat-label>
-                            <input formControlName="DOB" matInput [matDatepicker]="picker" autocomplete="off">
+                            <input formControlName="DOB" matInput 
+                            (blur)="OnBlur()"
+                            [matDatepicker]="picker" autocomplete="off">
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker></mat-datepicker>
                         </mat-form-field>
@@ -143,7 +150,8 @@
                     <mat-grid-tile [colspan]="1" [rowspan]="1">
                         <mat-form-field appearance="outline">
                             <mat-label>Class for which admission is sought</mat-label>
-                            <mat-select formControlName="ClassAdmissionSought">
+                            <mat-select (selectionChange)="OnBlur()"
+                             formControlName="ClassAdmissionSought">
                                 <mat-option value="0">---</mat-option>
                                 <mat-option *ngFor="let p of Classes" [value]="p.ClassId">
                                     {{p.ClassName}}
@@ -165,7 +173,7 @@
                 <button [disabled]="loading" (click)="back()" class="mat-raised-button" matTooltip="go to search">
                     <mat-icon>arrow_back</mat-icon>
                 </button>
-                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" matTooltip="save"
+                <button [disabled]="loading || Permission=='read' || !Edited" (click)="SaveOrUpdate()" matTooltip="save"
                     mat-raised-button color="accent">
                     <mat-icon>save</mat-icon>
                 </button>
@@ -180,32 +188,39 @@
             <div class="content" fxLayout="row wrap" fxLayoutGap="130px">
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>Student's Contact no.</mat-label>
-                    <input formControlName="ContactNo" autocomplete="Off" #Pincode matInput [maxlength]="10">
+                    <input formControlName="ContactNo" (blur)="OnBlur()"
+                     autocomplete="Off" #Pincode matInput [maxlength]="10">
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>WhatsApp No.</mat-label>
-                    <input formControlName="WhatsAppNumber" autocomplete="Off" matInput [maxlength]="10">
+                    <input formControlName="WhatsAppNumber" (blur)="OnBlur()"
+                     autocomplete="Off" matInput [maxlength]="10">
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>Father's contact no.</mat-label>
-                    <input formControlName="FatherContactNo" autocomplete="Off" #Pincode matInput [maxlength]="10">
+                    <input formControlName="FatherContactNo" (blur)="OnBlur()"
+                     autocomplete="Off" #Pincode matInput [maxlength]="10">
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>Mother's contact no.</mat-label>
-                    <input formControlName="MotherContactNo" autocomplete="Off" #Pincode matInput [maxlength]="10">
+                    <input formControlName="MotherContactNo" (blur)="OnBlur()"
+                     autocomplete="Off" #Pincode matInput [maxlength]="10">
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>Email Id</mat-label>
-                    <input type="email" formControlName="EmailAddress" autocomplete="Off" #Pincode matInput
+                    <input type="email" formControlName="EmailAddress" (blur)="OnBlur()"
+                     autocomplete="Off" #Pincode matInput
                         [maxlength]="50">
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>Aadhaar No</mat-label>
-                    <input formControlName="AadharNo" autocomplete="Off" #Pincode matInput [maxlength]="10">
+                    <input formControlName="AadharNo" (blur)="OnBlur()"
+                     autocomplete="Off" #Pincode matInput [maxlength]="10">
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>Permanent address</mat-label>
-                    <textarea formControlName="PermanentAddress" autocomplete="Off" matInput
+                    <textarea formControlName="PermanentAddress" (blur)="OnBlur()"
+                     autocomplete="Off" matInput
                         [maxlength]="250"></textarea>
                     <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
                     <span class="text-danger"
@@ -214,7 +229,8 @@
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>Present address</mat-label>
-                    <textarea formControlName="PresentAddress" autocomplete="Off" matInput [maxlength]="250"></textarea>
+                    <textarea formControlName="PresentAddress" (blur)="OnBlur()"
+                     autocomplete="Off" matInput [maxlength]="250"></textarea>
                     <!-- <mat-hint align="end">{{MotherName.value?.length || 0}}/50</mat-hint> -->
                     <span class="text-danger"
                         *ngIf="f.PresentAddress.touched && f.PresentAddress.hasError('required')">Present
@@ -233,17 +249,20 @@
                             <mat-form-field appearance="outline">
                                 <mat-label>Name Of contact person
                                 </mat-label>
-                                <input formControlName="NameOfContactPerson" autocomplete="Off" matInput
+                                <input formControlName="NameOfContactPerson" (blur)="OnBlur()"
+                                 autocomplete="Off" matInput
                                     [maxlength]="50">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>Relation with contact person</mat-label>
-                                <input formControlName="RelationWithContactPerson" autocomplete="Off" matInput
+                                <input formControlName="RelationWithContactPerson" (blur)="OnBlur()"
+                                 autocomplete="Off" matInput
                                     [maxlength]="50">
                             </mat-form-field>
                             <mat-form-field appearance="outline">
                                 <mat-label>Contact No.</mat-label>
-                                <input formControlName="ContactPersonContactNo" autocomplete="Off" matInput
+                                <input formControlName="ContactPersonContactNo" (blur)="OnBlur()"
+                                 autocomplete="Off" matInput
                                     [maxlength]="50">
                             </mat-form-field>
                         </span>
@@ -263,7 +282,7 @@
                 <button [disabled]="loading" (click)="back()" class="mat-raised-button" matTooltip="back to search">
                     <mat-icon>arrow_back</mat-icon>
                 </button>
-                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" alt="save" mat-raised-button
+                <button [disabled]="loading || Permission=='read' || !Edited" (click)="SaveOrUpdate()" alt="save" mat-raised-button
                     color="accent">
                     <mat-icon>save</mat-icon>
                 </button>
@@ -277,15 +296,18 @@
             <div class="content" fxLayout="row wrap" fxLayoutGap="100px">
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>Account no.</mat-label>
-                    <input formControlName="BankAccountNo" autocomplete="Off" #Pincode matInput [maxlength]="15">
+                    <input formControlName="BankAccountNo" (blur)="OnBlur()"
+                     autocomplete="Off" #Pincode matInput [maxlength]="15">
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>IFSC</mat-label>
-                    <input formControlName="IFSCCode" autocomplete="Off" #Pincode matInput [maxlength]="10">
+                    <input formControlName="IFSCCode" (blur)="OnBlur()"
+                     autocomplete="Off" #Pincode matInput [maxlength]="10">
                 </mat-form-field>
                 <mat-form-field appearance="outline" fxFlex>
                     <mat-label>MICR No.</mat-label>
-                    <input formControlName="MICRNo" autocomplete="Off" #Pincode matInput [maxlength]="10">
+                    <input formControlName="MICRNo" (blur)="OnBlur()"
+                     autocomplete="Off" #Pincode matInput [maxlength]="10">
                 </mat-form-field>
             </div>
             <mat-card-actions fxLayout="row" fxLayoutAlign="center center">
@@ -301,7 +323,7 @@
                     class="mat-raised-button">
                     <mat-icon>arrow_back</mat-icon>
                 </button>
-                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" alt="save" mat-raised-button
+                <button [disabled]="loading || Permission=='read' || !Edited" (click)="SaveOrUpdate()" alt="save" mat-raised-button
                     color="accent">
                     <mat-icon>save</mat-icon>
                 </button>
@@ -316,12 +338,14 @@
                 <div style="padding: 15px 15px 0px 15px;">
                     <mat-form-field appearance="outline">
                         <mat-label>Last school attended</mat-label>
-                        <input formControlName="TransferFromSchool" autocomplete="Off" #Pincode matInput
+                        <input formControlName="TransferFromSchool" (blur)="OnBlur()"
+                         autocomplete="Off" #Pincode matInput
                             [maxlength]="100">
                     </mat-form-field>
                     <mat-form-field appearance="outline">
                         <mat-label>Percentage obtained in last examination</mat-label>
-                        <input formControlName="LastSchoolPercentage" autocomplete="Off" #Pincode matInput
+                        <input formControlName="LastSchoolPercentage" (blur)="OnBlur()"
+                         autocomplete="Off" #Pincode matInput
                             [maxlength]="10">
                     </mat-form-field>
                 </div>
@@ -335,7 +359,7 @@
                     </mat-checkbox>&nbsp; Active
                     <mat-form-field *ngIf="StudentLeaving" appearance="outline">
                         <mat-label>Reason For Leaving</mat-label>
-                        <mat-select formControlName="ReasonForLeavingId">
+                        <mat-select formControlName="ReasonForLeavingId" (selectionChange)="OnBlur()">
                             <mat-option value="0">---</mat-option>
                             <mat-option *ngFor="let p of ReasonForLeaving" [value]="p.MasterDataId">
                                 {{p.MasterDataName}}
@@ -352,7 +376,7 @@
                 <button [disabled]="loading" (click)="back()" alt="back" class="mat-raised-button">
                     <mat-icon>arrow_back</mat-icon>
                 </button>
-                <button [disabled]="loading || Permission=='read'" (click)="SaveOrUpdate()" alt="save" mat-raised-button
+                <button [disabled]="loading || Permission=='read' || !Edited" (click)="SaveOrUpdate()" alt="save" mat-raised-button
                     color="accent">
                     <mat-icon>save</mat-icon>
                 </button>
