--- a/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/classes/dashboardclassfee/dashboardclassfee.component.html
@@ -24,9 +24,8 @@
             (click)="GetClassFee(StandardFilterWithBatchId,0)">
             <mat-icon>search</mat-icon>
         </button>
-        <button [disabled]="loading" matTooltip="copy from previous batch" 
-        style="margin-right: 15px;"
-        mat-raised-button color="accent" (click)="CopyFromPreviousBatch()">
+        <button [disabled]="loading" matTooltip="copy from previous batch" style="margin-right: 15px;" mat-raised-button
+            color="accent" (click)="CopyFromPreviousBatch()">
             <mat-icon>copy_all</mat-icon>
         </button>
         <button [disabled]="loading" matTooltip="create invoice" class="mat-raised-button" style="margin-right: 15px;"
@@ -70,7 +69,11 @@
             </mat-cell>
         </ng-container>
         <ng-container matColumnDef="Active">
-            <mat-header-cell *matHeaderCellDef style="justify-content: center;">Active </mat-header-cell>
+            <mat-header-cell *matHeaderCellDef style="justify-content: center;">
+                <mat-checkbox style="margin-right: 15px;" (click)="$event.stopPropagation()" (change)="SelectAll($event)">
+                </mat-checkbox>
+                Active
+            </mat-header-cell>
             <mat-cell *matCellDef="let element" style="justify-content: center;">
                 <mat-checkbox [checked]="element.Active" (click)="$event.stopPropagation()"
                     (change)="updateActive(element,$event)">
@@ -93,6 +96,7 @@
             </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;" style="display: flex;justify-content:baseline"></mat-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;" style="display: flex;justify-content:baseline">
+        </mat-row>
     </mat-table>
     <mat-paginator [pageSizeOptions]="[5,10,20]"></mat-paginator>
