--- a/src/app/modules/evaluation/classevaluation/classevaluation.component.html
+++ b/src/app/modules/evaluation/classevaluation/classevaluation.component.html
@@ -9,40 +9,7 @@
             <mat-icon>note_add</mat-icon>Type
         </ng-template>
         <div style="padding:15px 15px 10px 15px;"><strong>Type</strong></div>
-        <form [formGroup]="searchForm" style="display: flex;flex-direction: column;">
-            <mat-form-field appearance="outline" [style.width.px]="150">
-                <mat-label>Test/Exam</mat-label>
-                <mat-select formControlName="searchExamId">
-                    <mat-option *ngFor="let item of Exams" [value]="item.ExamId">{{item.ExamName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline" [style.width.px]="150">
-                <mat-label>Type</mat-label>
-                <mat-select formControlName="searchEvaluationTypeId">
-                    <mat-option *ngFor="let item of EvaluationTypes" [value]="item.MasterDataId">{{item.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline" [style.width.px]="150">
-                <mat-label>Class</mat-label>
-                <mat-select formControlName="searchClassId" (selectionChange)="GetSelectedClassSubject()">
-                    <mat-option *ngFor="let item of Classes" [value]="item.ClassId">{{item.ClassName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline" [style.width.px]="150">
-                <mat-label>Subject</mat-label>
-                <mat-select formControlName="searchSubjectId" (selectionChange)="SelectCategory()">
-                    <mat-option *ngFor="let item of SelectedClassSubjects" [value]="item.SubjectId">{{item.SubjectName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            
-            <button mat-mini-fab matTooltip="continue" (click)="tabchanged(1)">
-                <mat-icon>navigate_next</mat-icon>
-            </button>
-        </form>
+        <app-evaluationmaster (NotifyParent)="Detail($event)"></app-evaluationmaster>
     </mat-tab>
     <mat-tab>
         <ng-template mat-tab-label>
@@ -61,9 +28,8 @@
                             </mat-option>
                         </mat-select>
                     </mat-form-field>
-
                     <mat-form-field appearance="outline" [style.width.px]="200">
-                        <mat-label>Description</mat-label>
+                        <mat-label>Questionaire</mat-label>
                         <input type="text" matInput formControlName="searchDescription" autoComplete="Off"
                             [maxlength]="256">
                     </mat-form-field>
@@ -81,7 +47,7 @@
                         </mat-cell>
                     </ng-container>
                     <ng-container matColumnDef="Description">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>Description
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Questionaire
                         </mat-header-cell>
                         <mat-cell *matCellDef="let element">
                             <mat-form-field appearance="outline">
@@ -115,7 +81,7 @@
                                 </mat-select>
                             </mat-form-field>
                         </mat-cell>
-                    </ng-container>                   
+                    </ng-container>
                     <ng-container matColumnDef="DisplayOrder">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Display Order
                         </mat-header-cell>
