--- a/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.html
+++ b/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.html
@@ -1,14 +1,22 @@
-<div style="padding:15px 15px 10px 15px;">
+<!-- <div style="padding:15px 15px 10px 15px;">
     <div><strong>Class Evaluation</strong></div>
-</div>
+</div> -->
 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <!-- <alert></alert> -->
 <div style="padding: 15px;" fxLayout="row wrap">
     <div style="width: 100%;">
         <form [formGroup]="searchForm">
             <mat-form-field appearance="outline" [style.width.px]="150">
+                <mat-label>Type</mat-label>
+                <mat-select formControlName="searchEvaluationTypeId" (selectionChange)="GetEvaluationTypeId()">
+                    <mat-option *ngFor="let item of EvaluationTypes" [value]="item.MasterDataId">{{item.MasterDataName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="outline" [style.width.px]="150">
                 <mat-label>Class</mat-label>
                 <mat-select formControlName="searchClassId" (selectionChange)="getClassSubjects()">
+                    <mat-option value="0">select</mat-option>
                     <mat-option *ngFor="let item of Classes" [value]="item.ClassId">{{item.ClassName}}
                     </mat-option>
                 </mat-select>
@@ -21,42 +29,30 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-            <mat-form-field appearance="outline" [style.width.px]="150">
-                <mat-label>Topic</mat-label>
-                    <input matInput formControlName="searchTopic" autocomplete="Off">
-            </mat-form-field>
-            <mat-form-field appearance="outline" [style.width.px]="150">
-                <mat-label>Type</mat-label>
-                <mat-select formControlName="searchEvaluationTypeId">
-                    <mat-option [value]="0">select</mat-option>
-                    <mat-option *ngFor="let item of EvaluationTypes" [value]="item.MasterDataId">{{item.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
 
-            <button [disabled]="loading" mat-raised-button color="accent" (click)="GetOnlineEvaluation()">
+            <button [disabled]="loading" mat-raised-button color="accent" (click)="GetEvaluationMaster()">
                 <mat-icon>search</mat-icon>
             </button>
         </form>
         <!-- <div style="width: 100%;"> -->
-        <mat-table #table [dataSource]="dataSource" matSort style="width: 1200px;">
-            <ng-container matColumnDef="OnlineEvaluationId">
+        <mat-table #table [dataSource]="dataSource" matSort>
+            <ng-container matColumnDef="EvaluationMasterId">
                 <mat-header-cell *matHeaderCellDef>Id
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    {{element.OnlineEvaluationId}}
+                    {{element.EvaluationMasterId}}
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="Topic">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Topic/Name
+            <ng-container matColumnDef="Title">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Title
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field appearance="outline">
-                        <input [maxlength]="256" 
+                        <input [maxlength]="250" 
                         autocomplete="Off"
                         matInput 
-                        (blur)="onBlur(element)" [value]="element.Topic"
-                            [(ngModel)]="element.Topic">
+                        (blur)="onBlur(element)" [value]="element.Title"
+                            [(ngModel)]="element.Title">
                     </mat-form-field>
                 </mat-cell>
             </ng-container>
@@ -73,7 +69,7 @@
                     </mat-form-field>
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="SubjectId">
+            <ng-container matColumnDef="ClassSubjectId">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>Subject
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
@@ -97,12 +93,12 @@
             </ng-container>
             <ng-container matColumnDef="Action">
                 <mat-header-cell *matHeaderCellDef>
-                    <button [disabled]="loading" matTooltip="save all" mat-mini-fab (click)="AddNew()">
+                    <button *ngIf="EvaluationTypeId!=0" [disabled]="loading" matTooltip="add new" mat-mini-fab (click)="AddNew()">
                         <mat-icon>add</mat-icon>
                     </button>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button (click)="viewchild(element)">
+                    <button style="margin-right:15px;" mat-raised-button color="accent" (click)="PassParent(element)">
                         <mat-icon>pageview</mat-icon>
                     </button>
                     <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" mat-mini-fab
