--- a/src/app/modules/schoolreports/examtimetable/examtimetable.component.scss
+++ b/src/app/modules/schoolreports/examtimetable/examtimetable.component.scss
@@ -2,5 +2,12 @@ mat-form-field,button{
     margin-right: 15px;;
 }
 mat-cell:first-of-type{
-    padding-left: 0px;
+    //padding-left: 0px;
+    border-left: 1px solid lightgray;
+}
+mat-cell{
+    border-right: 1px solid lightgray;
+    //border-bottom: 1px solid lightgray;
+    padding: 10px;
+    align-self: stretch;
 }
