--- a/src/app/modules/schoolreports/dailytimetablereport/dailytimetablereport.component.scss
+++ b/src/app/modules/schoolreports/dailytimetablereport/dailytimetablereport.component.scss
@@ -9,10 +9,18 @@
 mat-cell:first-of-type,mat-header-cell:first-of-type{
     padding-left: 0px;
 }
-mat-cell{
+mat-cell,mat-header-cell{
     border-right: 1px solid lightgray;
     padding: 10px;
+    width: 150px;
+    justify-content: center;
     align-self: stretch;
+}
+.mat-footer-row,
+.mat-header-row,
+.mat-row {
+    display: inline-flex;
+    min-width: 100%;
 }
 .mat-table {
     display: table;
@@ -25,7 +33,7 @@ mat-cell{
 
         > .mat-header-cell, > .mat-cell {
             display: table-cell;
-//            height: 48px;
+            height: 48px;
             vertical-align: middle;        
             border-bottom: 1px solid rgba(0, 0, 0, 0.12);
         }
