--- a/src/app/modules/schoolreports/examtimetable/examtimetable.component.html
+++ b/src/app/modules/schoolreports/examtimetable/examtimetable.component.html
@@ -26,8 +26,8 @@
                 <mat-form-field appearance="outline" [style.width.px]="400">
                     <mat-label>Class</mat-label>
                     <mat-select formControlName="searchClassId" multiple>
-                        <mat-option [value]="0">--class--</mat-option>
-                        <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                        <mat-option #allSelected (click)="toggleAllSelection()" [value]="0">All</mat-option>
+                        <mat-option (click)="tosslePerOne()" *ngFor="let item of Classes" [value]="item.ClassId">
                             {{item.ClassName}}
                         </mat-option>
                     </mat-select>
@@ -50,10 +50,10 @@
                 <mat-table #table [dataSource]="dataSource" style="min-width: 600px;">
                     <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index"
                         matColumnDef="{{disCol}}">
-                        <mat-header-cell [attr.rowspan]="NoOfColumn" *matHeaderCellDef style="height: 0px;justify-content: center;">
-                            <div *ngIf="SlotNClassSubjects.length>0 && colIndex==0" style="width:100%; display: flex;flex-direction: column;justify-content: center;">
+                        <mat-header-cell [attr.rowspan]="NoOfColumn" *matHeaderCellDef style="justify-content: center;">
+                            <div *ngIf="SlotNClassSubjects.length>0 && colIndex==0" style="width:100%;margin:15px; display: flex;flex-direction: column;justify-content: center;">
                                 <div style="font-size: large;">{{SelectedExamName}} Time Table</div>
-                                <div> for {{SelectedClasses}}</div>
+                                <div>{{SelectedClasses}}</div>
                             </div>
                         </mat-header-cell>
                         <mat-cell *matCellDef="let element" [innerHTML]="element[disCol]">
