--- a/src/app/modules/studentexam/verifyresults/verifyresults.component.html
+++ b/src/app/modules/studentexam/verifyresults/verifyresults.component.html
@@ -7,7 +7,7 @@
     <div style="padding: 15px;" fxLayout="row wrap">
         <div style="width: 100%;">
             <form [formGroup]="searchForm">
-                <mat-form-field appearance="outline">
+                <mat-form-field appearance="outline" style="width:150px">
                     <mat-label>Exam</mat-label>
                     <mat-select formControlName="searchExamId">
                         <mat-option *ngFor="let item of Exams" [value]="item.ExamId">
@@ -15,7 +15,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <mat-form-field appearance="outline">
+                <mat-form-field appearance="outline" style="width:150px">
                     <mat-label>Class</mat-label>
                     <mat-select formControlName="searchClassId">
                         <!-- <mat-option [value]="0">--class--</mat-option> -->
@@ -24,7 +24,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <mat-form-field appearance="outline">
+                <mat-form-field appearance="outline" style="width:150px">
                     <mat-label>Section</mat-label>
                     <mat-select formControlName="searchSectionId">
                     <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
@@ -32,21 +32,24 @@
                     </mat-option>
                 </mat-select>  
                 </mat-form-field>               
-                <button [disabled]="loading" mat-raised-button color="accent" (click)="GetExamStudentSubjectResults()">
+                <button style="margin-right: 15px;" [disabled]="loading" mat-raised-button color="accent" (click)="GetExamStudentSubjectResults()">
                     <mat-icon>search</mat-icon>
                 </button>
-                <button [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
+                <button style="margin-right: 400px;" [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
                     <mat-icon>clear_all</mat-icon>
+                </button>
+                <button [disabled]="loading" matTooltip="verified" *ngIf="ExamStudentSubjectResult.length>0" mat-raised-button color="accent" (click)="Verified()">
+                    <mat-icon>checked</mat-icon>
                 </button>
             </form>            
 
             <mat-table #table [dataSource]="dataSource" matSort>                
             
                 <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header [ngStyle]="{'justify-content':disCol!='Rank' && disCol!='Student'?'center':'start'}">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>
                         {{disCol!='Action'?disCol:''}}                      
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element" [ngStyle]="{'justify-content':disCol=='Rank' || disCol=='Division' || disCol=='Student'?'start':'center'}">                        
+                    <mat-cell *matCellDef="let element">                        
                        {{element[disCol]}}                                    
                     </mat-cell>
                 </ng-container>
