--- a/src/styles.scss
+++ b/src/styles.scss
@@ -97,9 +97,9 @@ body {
 
 .red-snackbar {
     background: #F44336;
-    color: black;
+    color: white;
     .mat-simple-snackbar-action {
-        color: black !important;
+        color: white !important;
     }
 }
 
