--- a/src/app/modules/schoolreports/reportboard/reportboard.component.html
+++ b/src/app/modules/schoolreports/reportboard/reportboard.component.html
@@ -2,8 +2,7 @@
     <mat-card-title style="margin:20px">Report</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content style="margin:20px">
-
-        <mat-tab-group style="min-width: 1200px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+        <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
                     <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
@@ -13,7 +12,5 @@
                 </ng-template>
             </mat-tab>
         </mat-tab-group>
-
-
     </mat-card-content>
 </mat-card>
