--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -1,16 +1,16 @@
 <app-header [deviceXs]="deviceXs" (toggleSideBarForme)="sideBarToggler()"></app-header>
 <app-sidebar></app-sidebar>
 <app-footer></app-footer>
-<!-- <div fxLayout="column" fxLayoutAlign="start">
-    <app-header [deviceXs]="deviceXs" (toggleSideBarForme)="sideBarToggler()"></app-header>
-    <mat-drawer-container [hasBackdrop]="false">
-        <mat-drawer [opened]="openSideBar">
-            <app-sidebar></app-sidebar>     
-        </mat-drawer>
-        <mat-drawer-content fxLayout="row" fxLayoutAlign="space-between start">
-            <router-outlet></router-outlet>
-            <app-right></app-right>
-        </mat-drawer-content>
-    </mat-drawer-container>
-    <app-footer></app-footer>
-</div> -->
+<!-- <div fxLayout="column" fxLayoutAlign="start">-->
+<!-- <app-header [deviceXs]="deviceXs"></app-header>
+<mat-drawer-container [hasBackdrop]="false">
+    <mat-drawer [opened]="openSideBar">
+        <app-sidebar></app-sidebar>
+    </mat-drawer>
+    <mat-drawer-content>
+        <router-outlet></router-outlet>
+     
+    </mat-drawer-content>
+</mat-drawer-container>
+<app-footer></app-footer> -->
+<!-- </div>  -->
